--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,8 +9,8 @@
   }
 @font-face {
     font-family: "Google Sans Regular";
-    src: url('/Users/hemanth/Desktop/react-portfolio/src/assets/fonts/GoogleSans-Regular.ttf') format('woff2'),
-         url('/Users/hemanth/Desktop/react-portfolio/src/assets/fonts/GoogleSans-Regular.ttf') format('woff');
+    src: url('../../assets/fonts/GoogleSans-Regular.ttf') format('woff2'),
+         url('../../assets/fonts/GoogleSans-Regular.ttf') format('woff');
     font-weight: normal;
     font-style: normal;
 }
